[package]
name = "fastest_github_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }

serde = {version="1.0.149", features=["derive"]}
serde_json = "1.0.89"
rayon = "1.6.1"

